fix unreadable team chat input text color

--- a/www/teams/app-team.less
+++ b/www/teams/app-team.less
@@ -45,7 +45,7 @@
                 .cp-app-contacts-input {
                     textarea {
                         border: 0px;
-                        color: white;
+                        color: @cryptpad_text_col;
                     }
                 }
             }
